--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.2.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "16.8",
+    "react-dom": "16.8",
+    "react-is": "16.8",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.11",
+      "@emotion/styled": "^11.8.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
